--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <img src="img/s-l300.jpg">
               <h5 class="card_title">Glister</h5>
               <button class="btn btn-outline-primary"
-              data-fruta="Fresa">Comprar</button>
+              data-fruta="Glister">Comprar</button>
             </div>
           </div>  
         </article>
@@ -37,7 +37,7 @@
               <img src="img/hom-00-vis-snc-c-es-CO-xxx-d-06.jpg">
               <h5 class="card_title">Hom</h5>
               <button class="btn btn-outline-primary"
-              data-fruta="Cambur">Comprar</button>
+              data-fruta="Hom">Comprar</button>
             </div>
           </div>  
         </article>
@@ -48,7 +48,7 @@
               <img src="img/homel.jpg">
               <h5 class="card_title">Nutri lite</h5>
               <button class="btn btn-outline-primary"
-              data-fruta="Manzana">Comprar</button>
+              data-fruta="Nutri lite">Comprar</button>
             </div>
           </div>  
         </article>
