cambio por array

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </template>
 
     <footer class="row text-center">
-      <h3>Llamenos o envienos un mensaje al: 0424-1565040</h3>
+      <h3><b>Llamenos o envienos un mensaje al: 0424-1565040</b></h3>
     </footer> 
     <p class="text-center"> Copyrigth &copy; 2022 kisler_tecnologia</p>
     <script src="app.js"></script>
