--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <footer class="row text-center">
       <h3><b>Llamenos o envienos un mensaje al: 0424-1565040</b></h3>
     </footer> 
-    <p class="text-center"> Copyrigth &copy; 2022 kisler_tecnologia</p>
+    <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
     <script src="app.js"></script>
 </body>
 
