--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
   <main class="container mt-5">
 
     <div class="row text-center">
+
       <h1>¡Ventas Jose Miguel!</h1>
+
         <article class="col-sm-4 mp-3">
           <div class="card">
             <div class="card-body">
               <img src="img/s-l300.jpg">
-              <h5 class="card_title">Glister</h5>
+              <h5 class="card-title">Glister</h5>
+              <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Glister">Comprar</button>
+              data-fruta="Glister" data-precio="10">Comprar</button>
             </div>
           </div>  
         </article>
@@ -35,20 +38,22 @@
           <div class="card">
             <div class="card-body">
               <img src="img/hom-00-vis-snc-c-es-CO-xxx-d-06.jpg">
-              <h5 class="card_title">Hom</h5>
+              <h5 class="card-title">Hom</h5>
+              <p class="lead">$20</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Hom">Comprar</button>
+              data-fruta="Hom" data-precio="20">Comprar</button>
             </div>
           </div>  
         </article>
 
-        <article class="col-sm-4 mp-3">
+        <article class="col-sm-4 mb-3">
           <div class="card">
             <div class="card-body">
               <img src="img/homel.jpg">
-              <h5 class="card_title">Nutri lite</h5>
+              <h5 class="card-title">Nutri lite</h5>
+              <p class="lead">$30</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Nutri lite">Comprar</button>
+              data-fruta="Nutri lite" data-precio="30">Comprar</button>
             </div>
           </div>  
         </article>
@@ -60,11 +65,31 @@
     <ul class="list-group" id="carrito"></ul>
   </section>
 
+  <footer id="footer" class="container mt-3">
+    <template id="templateFooter">
+    <div class ="card">
+      <div class="card-body d-flex justify-content-between align-items-center">
+        <p class="lead mb-0"><b>Total: </b>$<span>1500</span></p>
+        <button class="btn btn-outline-info">Finalizar compra</button>
+      </div>
+    </div>
+    </template>
+  </footer>
+
   <template id="template">
-    <li class="list-group-item d-flex justify-content-between align-items-center">
-      <sapn class="lead">Fresa</sapn>
-      <span class="badge bg-primary rounded-pill">12</span>
+    <li class="list-group-item bg-secondary text-white">
+      <span class="badge bg-primary rounded-pill align-middle">12</span>
+      <sapn class="lead align-middle">Fresa</sapn>
     </li>
+  <li class ="list-group-item d-flex justify-content-between align-items-center">
+    <div>
+        <p class="lead mb-0">Sub-Total: $<span>10</span></p>
+    </div>
+    <div>
+        <button class="btn btn-sm btn-danger">Quitar</button>
+        <button class="btn btn-sm btn-success">Agregar</button>
+    </div>
+  </li>  
   </template>
 
     <footer class="row text-center">
