--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <main class="container mt-5">
 
     <div class="row text-center">
-      <h1>¡Ventas Jose Miguel!</h1>
+      <h1>¡Ventas zoraZay!</h1>
         <article class="col-sm-4 mp-3">
           <div class="card">
             <div class="card-body">
               <img src="img/s-l300.jpg">
               <h5 class="card_title">Glister</h5>
               <button class="btn btn-outline-primary"
-              data-fruta="Glister">Comprar</button>
+              data-fruta="Lonchera Térmica">Comprar</button>
             </div>
           </div>  
         </article>
@@ -37,7 +37,7 @@
               <img src="img/hom-00-vis-snc-c-es-CO-xxx-d-06.jpg">
               <h5 class="card_title">Hom</h5>
               <button class="btn btn-outline-primary"
-              data-fruta="Hom">Comprar</button>
+              data-fruta="Lonchera Térmica">Comprar</button>
             </div>
           </div>  
         </article>
@@ -48,7 +48,7 @@
               <img src="img/homel.jpg">
               <h5 class="card_title">Nutri lite</h5>
               <button class="btn btn-outline-primary"
-              data-fruta="Nutri lite">Comprar</button>
+              data-fruta="Thermal Lunchbox">Comprar</button>
             </div>
           </div>  
         </article>
