--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="row text-center">
 
-      <h1>¡Ventas Jose Miguel!</h1>
+      <h1>¡Ventas zoraZay!</h1>
 
         <article class="col-sm-4 mp-3">
           <div class="card">
@@ -29,7 +29,7 @@
               <h5 class="card-title">Glister</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Glister" data-precio="10">Comprar</button>
+              data-fruta="Lonchera Térmica" data-precio="10">Comprar</button>
             </div>
           </div>  
         </article>
