--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <div class="card">
             <div class="card-body">
               <img src="img/s-l300.jpg">
-              <h5 class="card-title">Glister</h5>
+              <h5 class="card-title">Lonchera Térmica</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Lonchera Térmica" data-precio="10">Comprar</button>
+              data-fruta="Glister" data-precio="10">Comprar</button>
             </div>
           </div>  
         </article>
@@ -38,8 +38,8 @@
           <div class="card">
             <div class="card-body">
               <img src="img/hom-00-vis-snc-c-es-CO-xxx-d-06.jpg">
-              <h5 class="card-title">Hom</h5>
-              <p class="lead">$20</p>
+              <h5 class="card-title">Lonchera Térmica</h5>
+              <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
               data-fruta="Hom" data-precio="20">Comprar</button>
             </div>
@@ -50,8 +50,8 @@
           <div class="card">
             <div class="card-body">
               <img src="img/homel.jpg">
-              <h5 class="card-title">Nutri lite</h5>
-              <p class="lead">$30</p>
+              <h5 class="card-title">Thermal Lunchbox</h5>
+              <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
               data-fruta="Nutri lite" data-precio="30">Comprar</button>
             </div>
@@ -93,7 +93,7 @@
   </template>
 
     <footer class="row text-center">
-      <h3><b>Llamenos o envienos un mensaje al: 0424-1565040</b></h3>
+      <h3><b>Llamenos o envienos un mensaje al: \n Cel. 0412-4335959</b></h3>
     </footer> 
     <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
     <script src="app.js"></script>
