--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
   </template>
 
     <footer class="row text-center">
-      <h3><b>Llamenos o envienos un mensaje al: \n Cel. 0412-4335959</b></h3>
+      <h3><b>Llamenos o envienos un mensaje al:</b></h3>
+        <h3><b> Cel. 0412-4335959</h3></b>
     </footer> 
     <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
     <script src="app.js"></script>
