--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <article class="col-sm-4 mp-3">
           <div class="card">
             <div class="card-body">
-              <img src="img/s-l300.jpg">
+              <img src="img/1.jpg">
               <h5 class="card-title">Lonchera Térmica</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
@@ -37,7 +37,7 @@
         <article class="col-sm-4 mp-3">
           <div class="card">
             <div class="card-body">
-              <img src="img/hom-00-vis-snc-c-es-CO-xxx-d-06.jpg">
+              <img src="img/2.jpg">
               <h5 class="card-title">Lonchera Térmica</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
@@ -49,7 +49,7 @@
         <article class="col-sm-4 mb-3">
           <div class="card">
             <div class="card-body">
-              <img src="img/homel.jpg">
+              <img src="img/3.jpg">
               <h5 class="card-title">Thermal Lunchbox</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
