--- a/index.html
+++ b/index.html
@@ -95,10 +95,33 @@
   </li>  
   </template>
 
-    <footer class="row text-center">
+    <div class="row text-center">
       <h3><b>Llamenos o envienos un mensaje al:</b></h3>
         <h3><b> Cel. 0412-4335959</h3></b>
-    </footer> 
+    </div> 
+    
+    <footer>
+   <div class="container grid-3">
+     <div class="copyright">
+       <h1>Skilllz</h1>
+       <p>Copyright &copy; 2021</p>
+     </div>
+     <nav class="links">
+       <ul>
+         <li><a href="" class="outline">Home</a></li>
+         <li><a href="" class="outline">Tutors</a></li>
+         <li><a href="" class="outline">Categories</a></li>
+       </ul>
+     </nav>
+     <div class="profiles">
+       <a href=""><em class="fab fa-twitter fa-2x"></em></a>
+       <a href=""><em class="fab fa-instagram fa-2x"></em></a>
+       <a href=""><em class="fab fa-facebook fa-2x"></em></a>
+       <a href=""><em class="fab fa-whatsapp fa-2x"></em></a>
+     </div>
+   </div>
+ </footer>
+    
     <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
     <script src="app.js"></script>
 </body>
