--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <footer>
    <div class="container grid-3">
      <div class="copyright">
-       <h1>Skilllz</h1>
-       <p>Copyright &copy; 2021</p>
+       <h1>zoraZay</h1>
+       <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
      </div>
      <nav class="links">
        <ul>
@@ -122,7 +122,7 @@
    </div>
  </footer>
     
-    <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
+    
     <script src="app.js"></script>
 </body>
 
