--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
    <div class="container grid-3">
      <div class="copyright">
        <h1>zoraZay</h1>
-       <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
+       <p class="text-center mb-0 mt-4" div style="background-color: white">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
      </div>
      <nav class="links">
        <ul>
