--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <footer>
    <div class="container grid-3">
      <div class="copyright">
-       <h1 "color: white">zoraZay</h1>
-       <p class="text-center mb-0 mt-4" div style="font-color: white">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
+       <h1 style="color:white">zoraZay</h1>
+       <p class="text-center mb-0 mt-4" style="color: white">Copyright &copy;2022 | Hecho <span class="ti-heart fg-theme-red"></span> por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p>
      </div>
      <nav class="links">
        <ul>
