--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <h5 class="card-title">Lonchera Térmica</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Glister" data-precio="10">Comprar</button>
+              data-fruta="Lunch Light" data-precio="10">Comprar</button>
             </div>
           </div>  
         </article>
@@ -44,7 +44,7 @@
               <h5 class="card-title">Lonchera Térmica</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Hom" data-precio="10">Comprar</button>
+              data-fruta="Lunch Blue" data-precio="10">Comprar</button>
             </div>
           </div>  
         </article>
@@ -56,7 +56,7 @@
               <h5 class="card-title">Thermal Lunchbox</h5>
               <p class="lead">$10</p>
               <button class="btn btn-outline-primary"
-              data-fruta="Nutri lite" data-precio="10">Comprar</button>
+              data-fruta="Lunch Black" data-precio="10">Comprar</button>
             </div>
           </div>  
         </article>
