--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
      <div class="copyright">
        <h1 style="color:#FFFFFF">zoraZay</h1>
        <div style="color:#FFFFFF">
-           <p class="text-center mb-0 mt-4">Copyright &copy;2022 | Hecho 
+           <p>Copyright &copy;2022 | Hecho 
                <span class="ti-heart fg-theme-red"></span> 
                por <a href="http://ekisler.github.io/">kisler_tecnologia</a></p></div>
      </div>
